# cs6420-project-starter

./: CMakeLists.txt  README.md  catch2.h
test/: tester.cpp  tester1.cpp  tester2.cpp
